missing gradle files

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,3 +10,4 @@ android.useAndroidX=true
 org.gradle.configuration-cache=true
 org.gradle.jvmargs=-Xmx1536m
 org.gradle.parallel=true
+android.injected.androidTest.leaveApksInstalledAfterRun=true
